test/errors/importee-forbidden-hook/hook.jsx
import { useState } from "react";
/**
 * @__IMPORTABLE_HOOK__
 */

export default function useTestHook() {
  const [a, setA] = useState(false);
}
